--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "desafio-backend",
+  "name": "trabajo-final--backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
+  "description": "Trabajo del curso de Back End de CoderHouse",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build":"webpack",
-    "start":"node ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eagranero/Desafio-BackEnd.git"
+    "url": "git+https://github.com/eagranero/Trabajo-Final-Backend.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Eduardo Granero",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/eagranero/Desafio-BackEnd/issues"
+    "url": "https://github.com/eagranero/Trabajo-Final-Backend/issues"
   },
-  "homepage": "https://github.com/eagranero/Desafio-BackEnd#readme",
-  "devDependencies": {
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-node-externals": "^3.0.0"
-  },
+  "homepage": "https://github.com/eagranero/Trabajo-Final-Backend#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
-  }
+  },
+  "engines":{"node":"16.16.0"}
 }
