--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "trabajo-final--backend",
   "version": "1.0.0",
   "description": "Trabajo del curso de Back End de CoderHouse",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
