--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
+    "mongoose": "^6.6.0",
     "socket.io": "^4.5.1"
   },
-  "engines":{"node":"16.16.0"}
+  "engines": {
+    "node": "16.16.0"
+  }
 }
