Trabajo final Segunda entrega

--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "trabajo-final--backend",
+  "name": "desafio-backend",
   "version": "1.0.0",
-  "description": "Trabajo del curso de Back End de CoderHouse",
-  "main": "server.js",
+  "description": "Desafios Curso de Back-End",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eagranero/Trabajo-Final-Backend.git"
+    "url": "git+https://github.com/eagranero/Desafio-BackEnd.git"
   },
-  "author": "Eduardo Granero",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/eagranero/Trabajo-Final-Backend/issues"
+    "url": "https://github.com/eagranero/Desafio-BackEnd/issues"
   },
-  "homepage": "https://github.com/eagranero/Trabajo-Final-Backend#readme",
+  "homepage": "https://github.com/eagranero/Desafio-BackEnd#readme",
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
+  },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "cors": "^2.8.5",
+    "autocannon": "^7.10.0",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "firebase-admin": "^11.0.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "forever": "^4.0.3",
+    "forever-monitor": "^3.0.3",
+    "knex": "^2.3.0",
     "mongoose": "^6.6.0",
-    "socket.io": "^4.5.1"
-  },
-  "engines": {
-    "node": "16.16.0"
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
+    "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.1",
+    "twilio": "^3.83.2",
+    "winston": "^3.8.2",
+    "yargs": "^17.6.0"
   }
 }
